<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_height="60dp"
        android:background="@color/cyan"
        android:orientation="vertical"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/textView2"
            style="@style/txt_style_2"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/title_guide" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="10dp">

        <LinearLayout style="@style/horizontal_container_style">
            <TextView
                android:id="@+id/textView"
                style="@style/txt_style_1"
                android:text="@string/txt_name" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/grayCloud" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout style="@style/horizontal_container_style">

            <TextView
                android:id="@+id/textView3"
                style="@style/txt_style_1"
                android:layout_gravity="center"
                android:text="@string/txt_email" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="@color/grayCloud" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout style="@style/horizontal_container_style">

            <TextView
                android:id="@+id/textView4"
                style="@style/txt_style_1"
                android:layout_gravity="center"
                android:text="@string/txt_phone" />

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="phone"
                android:textColor="@color/grayCloud" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView5"
                style="@style/txt_style_1"
                android:layout_height="wrap_content"
                android:text="@string/txt_DOB" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="-40dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:baselineAligned="false">


            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spn_days"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spn_months"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_year"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="right|center_vertical"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="year"
                    android:inputType="number"
                    android:textColor="@color/grayCloud" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout style="@style/horizontal_container_style">

            <TextView
                android:id="@+id/textView6"
                style="@style/txt_style_1"
                android:layout_width="100dp"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:text="@string/txt_gender" />

            <Spinner
                android:id="@+id/spn_gender"
                android:layout_width="142dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout style="@style/horizontal_container_style">

            <TextView
                android:id="@+id/textView7"
                style="@style/txt_style_1"
                android:layout_width="100dp"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:text="@string/txt_pass" />

            <EditText
                android:id="@+id/edt_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/grayCloud" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/btn_save"
            style="@style/btn_style_1"
            android:onClick="btn_save_onClick"
            android:text="@string/btn_save"
            android:textColor="#FFFFFF"
            app:backgroundTint="@color/cyan"
            app:cornerRadius="15dp" />

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>